@@ -23,8 +23,8 @@ public class GsonUtil {
             return fromJsonTo(json, TypeToken.getParameterized(List.class, clazz));
         }
 
-        Integer.valueOf(3).compareTo(2)
-        new Integer(3).compareTo(2)
+        Integer.valueOf(3).compareTo(2);
+        new Integer(3).compareTo(2);
         HashMap<URL, Integer> hits = new HashMap<>();
         for (HashMap.Entry<URL, Integer> e : hits) {
             // ... This can become very slow for larger hashmaps of URLS.
